[project]
name = "chainlifter"
version = "0.1.0"
authors = [
    {name = "James Stevenson"}
]
description = "Python frontend to Rust chainfile crate"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov"
]
dev = [
    "maturin",
    "ruff",
    "black",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/jsstevenson/chainlifter"
Documentation = ""
Changelog = "https://github.com/jsstevenson/chainlifter/releases"
Source = "https://github.com/jsstevenson/chainlifter"
"Bug Tracker" = "https://github.com/jsstevenson/chainlifter/issues"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "chainlifter._core"
